streamline nameing and tests

--- a/applications/source/debezium-source/README.adoc
+++ b/applications/source/debezium-source/README.adoc
@@ -18,10 +18,9 @@ The `Debezium Source` currently supports CDC for multiple datastores: https://de
 == Options
 
 //tag::configuration-properties[]
+$$cdc.binding-name$$:: $$If set overrides the default message binding name. If not set the binding name is computed from the function definition name and the '-out-0' suffix. If the function definition name is empty, the binding name defaults to 'debezium-out-0'.$$ *($$String$$, default: `$$<none>$$`)*
 $$cdc.debezium$$:: $$Spring pass-trough wrapper for debezium configuration properties. All properties with a 'cdc.debezium.' prefix are native Debezium properties. The prefix is removed, converting them into Debezium io.debezium.config.Configuration.$$ *($$Map<String, String>$$, default: `$$<none>$$`)*
-$$cdc.disable-default-consumer$$:: $$When set to 'true', it allows replace the default Consumer or ChangeEvent implementation. Do not change unless you know what you are doing.$$ *($$Boolean$$, default: `$$false$$`)*
-$$cdc.format$$:: $$(Experimental) Debezium message format. Defaults to 'json'.$$ *($$DebeziumFormat$$, default: `$$<none>$$`, possible values: `json`,`avro`)*
-$$cdc.override-binding-name$$:: $$If set overrides the default message binding name. If not set the binding name is computed from the function definition name and the '-out-0' suffix. If the function definition name is empty, the binding name defaults to 'cdcSupplier-out-0'.$$ *($$String$$, default: `$$<none>$$`)*
+$$cdc.format$$:: $$(Experimental) Debezium message format. Defaults to 'json'.$$ *($$DebeziumFormat$$, default: `$$<none>$$`, possible values: `JSON`,`AVRO`)*
 //end::configuration-properties[]
 
 ==== Event flattening configuration
